--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -214,6 +214,14 @@ journal = {SIAM Journal on Scientific Computing}
   url={https://arxiv.org/abs/1412.3555},
 }
 
+@article{qphysics1,
+      title={On the calculation of the quality factor in contemporary photonic resonant structures}, 
+      author={Thomas Christopoulos and Odysseas Tsilipakos and Georgios Sinatkas and Emmanouil E. Kriezis},
+      year={2019},
+  journal={arXiv preprint arXiv:1902.09415},
+  url={https://arxiv.org/abs/1902.09415},
+}
+
 @book{blind1,
 author = {Comon, Pierre and Jutten, Christian},
 year = {2010},
