--- a/latex/ch2.tex
+++ b/latex/ch2.tex
@@ -303,7 +303,7 @@ where $K$ is the total bins of the CQT, $B$ is the bins-per-octave, and $\xi_{\t
 
 In the landscape of music analysis libraries, Essentia,\footnote{\url{https://essentia.upf.edu/}} LTFAT,\footnote{\url{https://ltfat.org/}} and the MATLAB Wavelet Toolbox\footnote{\url{https://www.mathworks.com/help/wavelet/ref/cqt.html}} have converged on the CQ-NSGT \parencite{invertiblecqt, slicq, variableq1}. However, librosa\footnote{\url{https://librosa.org/}} still uses the older implementation with the approximate reconstruction \parencite{klapuricqt}. Finally, \textcite{invertiblecqt} have released an open-source reference Python implementation\footnote{\url{https://github.com/grrrr/nsgt}} of the CQ-NSGT and the sliCQT.
 
-Several examples of magnitude spectrograms of the glockenspiel signal are generated using the STFT, shown in Figure \ref{fig:cqtvsstft1}, and the CQT, shown in Figure \ref{fig:cqtvsstft2}. The spectrograms generated from the standard STFT spectrogram\footnote{\url{https://www.mathworks.com/help/signal/ref/spectrogram.html}} and the CQ-NSGT implementation of the CQT from the MATLAB Wavelet Toolbox. Note how the CQT spectrograms show more spectral information than the STFT spectrograms at all frequency resolutions.
+Several examples of magnitude spectrograms of the glockenspiel signal are generated using the STFT, shown in Figure \ref{fig:cqtvsstft1}, and the CQT, shown in Figure \ref{fig:cqtvsstft2}. The spectrograms were generated from the standard STFT spectrogram in MATLAB\footnote{\url{https://www.mathworks.com/help/signal/ref/spectrogram.html}} and the CQ-NSGT implementation of the CQT from the MATLAB Wavelet Toolbox.\footnote{The CQT is included in the MATLAB Wavelet Toolbox because the CQT is considered to be a type of wavelet transform \parencite{klapuricqt}. Wavelet transforms are an important topic in time-frequency analysis, and have many uses in audio and musical applications. However, they are beyond the scope of this thesis.} Note how the CQT spectrograms show more spectral information than the STFT spectrograms at all frequency resolutions.
 
 As mentioned throughout this section, the best implementation choice for the CQT is the NSGT, which allows for a perfect inverse transform. Section \ref{sec:theorynsgt} will introduce and describe the general NSGT, and Section \ref{sec:theoryslicqt} will introduce and describe the sliCQT, which is a realtime variant of the NSGT. The NSGT and sliCQT allow the analysis of audio with an arbitrary nonuniform frequency scale not limited to the Constant-Q scale, which will give me more freedom in this thesis to find a frequency scale that performs best for music source separation applications.
 
@@ -1092,51 +1092,6 @@ The entire process of median-filtering HPSS with binary masks applied to the spe
 \end{figure}
 
 \textcite{driedger} also introduced a two-pass variant. The first pass separates the harmonic component using an STFT with a large window size for high frequency resolution, followed by the second pass, which separates the percussive component using an STFT with a small window size for high time resolution. \textcite{fitzgerald2} created a similar iterative variant using soft masks, a larger window size for the harmonic separation, and a smaller window size for the percussive separation. Additionally, they noted that when they replaced the small-window STFT with the CQT in the second pass, they obtained a separation of the human singing voice. These modifications of HPSS related to the time-frequency tradeoff of the STFT and CQT directly inspired the hypothesis of this thesis, which is that using the sliCQT instead of the STFT in a neural network for music source separation might improve the results due to the better time-frequency resolution characteristics of the sliCQT.
-
-\subsubsection{Source separation with wavelets}
-\label{sec:wavelets}
-
-In this section, I will describe the use of wavelets and wavelet transforms in source separation. Wavelet transforms were designed to overcome the fixed time-frequency resolution of the STFT \parencite{wavelets1, wavelets2}. This relates to the hypothesis of this thesis, which is that the varying time-frequency resolution of the sliCQT might lead to an advantage over the STFT in a music source separation application.
-
-Like the CQT, NSGT, and sliCQT, the wavelet transform uses short windows in the high-frequency regions and long windows in the low-frequency regions, making it more suitable for musical and auditory applications from its nonuniform frequency resolution. As noted in Section \ref{sec:theorynsgt} when introducing the Bark scale, \textcite{barkjust1} used a Bark-scale wavelet transform to improve an audio source separation algorithm that was previously based on the STFT:
-
-\begin{quote}
-	Traditionally, short time Fourier transform (STFT) is used in many audio and speech processing applications. Bark-Scaled Wavelet Packet Decomposition (BS-WPD) is a time-frequency signal transformation with non uniform frequency resolution. This transformation reflects the critical bands structure of the human auditory system \parencite[1]{barkjust1}.
-\end{quote}
-
-Wavelet transforms relate to the Fourier transform as follows. The Fourier transform, described previously in Section \ref{sec:freqanal}, represents a signal as a sum of sinusoids which are infinite in duration. The infinite duration is, in fact, what leads to the time-frequency uncertainty principle, since it transforms a time-domain waveform into the mutually exclusive frequency domain without any temporal information. Wavelet transforms, instead of using infinite sinusoids, represent signals as a sum of \textit{wavelets}, which are finite in duration:
-
-\begin{quote}
-       Many signals and images of interest exhibit piecewise smooth behavior punctuated by transients. Speech signals are characterized by short bursts encoding consonants followed by steady-state oscillations indicative of vowels[...] Unlike the Fourier basis, wavelet bases are adept at sparsely representing piecewise regular signals and images, which include transient behavior. Compare wavelets with sine waves, which are the basis of Fourier analysis. Sinusoids do not have limited duration -- they extend from minus to plus infinity. While sinusoids are smooth and predictable, wavelets tend to be irregular and asymmetric.\footnote{\url{https://www.mathworks.com/help/wavelet/gs/what-is-a-wavelet.html}}
-\end{quote}
-
-The wavelet and infinite sinusoid are compared in Figure \ref{fig:waveletinf}.
-
-\begin{figure}[ht]
-       \centering
-        \begin{minipage}{1.\textwidth}
-               \renewcommand\footnoterule{} % optional removing footnote bar
-               \renewcommand{\thempfootnote}{\fnsymbol{mpfootnote}}
-               \includegraphics[width=0.65635\textwidth]{./images-wavelets/wavelet.png}
-               \caption[Infinite sine wave of the Fourier transform vs. finite wavelet.]{Infinite sine wave of the Fourier transform vs. finite wavelet.\footnote[1]{\url{https://www.mathworks.com/help/wavelet/gs/what-is-a-wavelet.html}}}
-               \label{fig:waveletinf}
-       \end{minipage}
-\end{figure}
-
-\textcite{wavelets} use a wavelet transform to perform source separation. They create a \textit{scalogram}, which is the wavelet equivalent of a spectrogram, using a wavelet transform similar to the constant-Q transform \parencite[2--3]{wavelets}:
-
-\begin{quote}
-       The time-frequency structures of audio signals are well revealed by Q-constant filter banks, which model the signal cochlea transformation. This can also be written as a multiscale wavelet transform, whose modulus defines a time-frequency representation that is called a scalogram image[...] We show that a wavelet transform can partly separate the time-frequency supports of two different harmonic template models, and characterize the overlap of these time-frequency supports.
-\end{quote}
-
-Figure \ref{fig:waveletsep} shows the wavelet scalogram-based source separation.
-
-\begin{figure}[ht]
-       \centering
-       \includegraphics[width=0.65635\textwidth]{./images-wavelets/wavelet_sep.png}
-       \caption{Source separation using wavelets. Cyan shows the first harmonic source, yellow shows the second harmonic source, and red shows the overlap \parencite[5]{wavelets}.}
-       \label{fig:waveletsep}
-\end{figure}
 
 \subsubsection{Open-Unmix (UMX)}
 \label{sec:umx}
