Add extra appendix for dim cmp

--- a/latex/ch3.tex
+++ b/latex/ch3.tex
@@ -187,7 +187,9 @@ As discussed in Section \ref{sec:ml}, the validation split of a dataset is often
 
 As described in Section \ref{sec:improvelib}, the time and frequency resolution of the sliCQT are defined from the frequency scale, and the parameters of the frequency scale are $f_{\text{min}}$ and $f_{\text{max}}$, which are the minimum and maximum frequency in Hz respectively, and the total frequency bins.
 
-The maximum frequency $f_{\text{max}}$ was fixed to 22,050 Hz, which is the Nyquist rate of the 44,100 Hz sample rate of MUSDB18-HQ. I made this decision after early experiments showed that fixing the maximum frequency to 22,050 Hz led to a smaller size of the sliCQT, resulting in lower memory demands on the system. The minimum frequency $f_{\text{min}}$ was chosen from the range of 10.0--130.0 Hz, loosely based on the frequencies of the C0 (16.35 Hz) and C3 (130.81 Hz) notes of the well-tempered scale.
+The maximum frequency $f_{\text{max}}$ was fixed to 22,050 Hz, which is the Nyquist rate of the 44,100 Hz sample rate of MUSDB18-HQ. I made this decision after early experiments showed that fixing the maximum frequency to 22,050 Hz led to a smaller size of the sliCQT, resulting in lower memory demands on the system. The results of these early experiments are described in Appendix \ref{appendix:slicqdim1}.
+
+The minimum frequency $f_{\text{min}}$ was chosen from the range of 10.0--130.0 Hz, loosely based on the frequencies of the C0 (16.35 Hz) and C3 (130.81 Hz) notes of the well-tempered scale.
 
 The total frequency bins were chosen from the range of 10--300 bins. The 300-bin maximum was determined by the maximum size of sliCQT that could fit in the 12 GB GPU memory of the NVIDIA 3080 Ti GPU. Details of the hardware limitations of the testbench computer are shown in Appendix \ref{appendix:computerspec}.
 
@@ -252,7 +254,7 @@ Finally, in Section \ref{sec:xumxinc}, I will show how I incorporated the X-UMX 
 
 In this section, I will describe the changes made to X-UMX to support the data-structure of the sliCQT shown in Section \ref{sec:torchslicqdatastructure}, which addressed the distinct traits of the sliCQT compared to the STFT: the 3D slice-wise output, and the ragged shape from the nonuniform time-frequency resolution.
 
-Firstly, X-UMX uses a sequence duration of six seconds, meaning the training input is the STFT of six seconds of music. The dimensionality of the sliCQT for a waveform is larger than the STFT, and in my experiments, the sliCQT of a six second sequence used too much GPU memory during training. In xumx-sliCQ, I chose a smaller sequence duration of one second, resulting in a sliCQT with fewer coefficients that uses less GPU memory. Also, a one-second sequence duration is common in several demixing papers \parencite{plumbley1, plumbley2, demucs}.
+Firstly, X-UMX uses a sequence duration of six seconds, meaning the training input is the STFT of six seconds of music. The dimensionality of the sliCQT for a waveform is larger than the STFT for a variety of different sliCQT parameters, as was discovered during preliminary experiments shown in Appendix \ref{appendix:slicqdim2}. In these experiments, the sliCQT of a six second sequence used too much GPU memory during training. In xumx-sliCQ, I chose a smaller sequence duration of one second, resulting in a sliCQT with fewer coefficients that uses less GPU memory. Also, a one-second sequence duration is common in several demixing papers \parencite{plumbley1, plumbley2, demucs}.
 
 In sections \ref{sec:raggedtf} and \ref{sec:torchslicqdatastructure}, I described the data structure of the ragged sliCQT and how it differed from the single rectangular matrix of the STFT. The ragged sliCQT outputs a list of 3D matrices, representing the sliced transform, that must be overlap-added to create a list of 2D time-frequency matrices. Recall that the list was introduced from the raggedness of the transform, because each group of time-frequency bins has a different temporal framerate, resulting in a different size tensor or matrix. This raggedness is a desired characteristic of nonuniform time-frequency transforms like the NSGT, sliCQT, and even the original CQT.
 
@@ -360,7 +362,7 @@ X-UMX has a bandwidth parameter that controls how much of the 2049 output freque
 \subsubsection{De-overlap layer}
 \label{sec:deoverlap}
 
-In this section, I will discuss the ``de-overlap layer'' that I created, which is necessary for both the Bi-LSTM and CDAE architectures of xumx-sliCQ. I described in Section \ref{sec:theoryslicqt} and \ref{sec:stftslicqtcomp1} that the 3D sliCQT needs its adjacent slices to be overlap-added by 50\% to create a cohesive spectrogram, due to the symmetric zero-padding of each slice introduced by \textcite{slicq} in the sliCQT to reduce time-domain aliasing. This 50\% overlap-add procedure does not have an exact inverse operation.
+In this section, I will discuss the ``de-overlap layer'' that I created, which is necessary for both the Bi-LSTM and CDAE architectures of xumx-sliCQ. I described in Section \ref{sec:theoryslicqt} and \ref{sec:stftslicqtcomp1} that the 3D sliCQT needs its adjacent slices to be overlap-added by 50\% to create a spectrogram, due to the symmetric zero-padding of each slice introduced by \textcite{slicq} in the sliCQT to reduce time-domain aliasing. This 50\% overlap-add procedure does not have an exact inverse operation.
 
 In the neural network of xumx-sliCQ, before applying either the Bi-LSTM or CDAE architectures, the first step is to overlap-add the 3D sliCQT to create a 2D time-frequency sliCQT. This means that in the final step of the neural network, the 2D overlap-added sliCQT needs to be transformed back to its original, non-overlap-added 3D shape. For this, I needed to create a custom layer in the neural network that could learn how to do the inverse overlap-add.
 
