--- a/latex/ch6.tex
+++ b/latex/ch6.tex
@@ -97,6 +97,17 @@ By contrast, the logarithmic scale takes the total number of frequency bins as a
 
 \newpagefill
 
+\section{sliCQT dimensionality and size experiments}
+\label{appendix:slicqdim}
+
+\subsection{Fixing $f_{\text{max}}$ to the Nyquist rate}
+\label{appendix:slicqdim1}
+
+\subsection{STFT and sliCQT compared}
+\label{appendix:slicqdim2}
+
+\newpagefill
+
 \section{xumx-sliCQ experiments}
 \label{appendix:crazyexperiments}
 
